--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>controller.Application</mainClass>
+					<mainClass>CrudApplication</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
 				<executions>
