--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+database.name=pdv
 spring.datasource.url=jdbc:mysql://localhost:3306/pdv
 spring.datasource.username=root
 spring.datasource.password=fiap2019
@@ -5,5 +6,3 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-#server.servlet.context-path=/api
-#spring.data.rest.basePath=/api
